[gd_scene load_steps=2 format=3 uid="uid://nba3nryom3ud"]

[ext_resource path="res://src/UI/Dialogs/PreviewDialog.gd" type="Script" id=1]
[ext_resource path="res://src/UI/Nodes/ValueSlider.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/Dialogs/HelperScripts/SmartSlicePreview.gd" type="Script" id=3]
[ext_resource path="res://src/UI/Dialogs/HelperScripts/RowColumnLines.gd" type="Script" id=4]

[node name="PreviewDialog" type="ConfirmationDialog"]
offset_right = 550.0
offset_bottom = 410.0
custom_minimum_size = Vector2( 550, 70 )
exclusive = true
window_title = "Import Options"
resizable = true
script = ExtResource( "1" )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -36.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
expand_mode = 1
stretch_mode = 6

[node name="RowColumnLines" type="Control" parent="VBoxContainer/CenterContainer/TextureRect"]
unique_name_in_owner = true
script = ExtResource( 4 )

[node name="SmartSlice" type="Control" parent="VBoxContainer/CenterContainer/TextureRect"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ApplyAll" type="CheckBox" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Apply to all"

[node name="SizeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="ImageSizeLabel" type="Label" parent="VBoxContainer/SizeContainer"]
layout_mode = 2
text = "Image Size: 64×64"

[node name="FrameSizeLabel" type="Label" parent="VBoxContainer/SizeContainer"]
visible = false
layout_mode = 2
text = "Frame size: 64×64"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Import as:"

[node name="ImportOption" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="SpritesheetTabOptions" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Manual" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/SpritesheetTabOptions"]
margin_right = 378.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/SpritesheetTabOptions/Manual"]
layout_mode = 2
text = "Horizontal frames:"

[node name="HorizontalFrames" type="SpinBox" parent="VBoxContainer/HBoxContainer/SpritesheetTabOptions/Manual"]
layout_mode = 2
mouse_default_cursor_shape = 2
min_value = 1.0
value = 1.0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/SpritesheetTabOptions/Manual"]
layout_mode = 2
text = "Vertical frames:"

[node name="VerticalFrames" type="SpinBox" parent="VBoxContainer/HBoxContainer/SpritesheetTabOptions/Manual"]
layout_mode = 2
mouse_default_cursor_shape = 2
min_value = 1.0
value = 1.0

[node name="Smart" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/SpritesheetTabOptions"]
visible = false
margin_top = 28.0
margin_right = 458.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Threshold" parent="VBoxContainer/HBoxContainer/SpritesheetTabOptions/Smart" instance=ExtResource( 2 )]
margin_right = 195.0
hint_tooltip = "Images that have any one side smaller than this value will cross the threshold"
min_value = 1.0
value = 10.0
allow_greater = true
prefix = "Threshold:"
suffix = "px"

[node name="MergeDist" parent="VBoxContainer/HBoxContainer/SpritesheetTabOptions/Smart" instance=ExtResource( 2 )]
margin_left = 199.0
margin_right = 394.0
hint_tooltip = "Images which crossed the threshold will get merged into a larger image, if they are within this distance"
value = 3.0
prefix = "Merge distance:"
suffix = "px"

[node name="Slice" type="Button" parent="VBoxContainer/HBoxContainer/SpritesheetTabOptions/Smart"]
margin_left = 398.0
margin_right = 458.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
text = "Refresh"

[node name="SmartSlice" type="CheckBox" parent="VBoxContainer/HBoxContainer/SpritesheetTabOptions"]
margin_top = 28.0
margin_right = 378.0
margin_bottom = 52.0
mouse_default_cursor_shape = 2
text = "Smart Slice"

[node name="SpritesheetLayerOptions" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/SpritesheetLayerOptions"]
layout_mode = 2
text = "Start frame:"

[node name="AtFrameSpinbox" type="SpinBox" parent="VBoxContainer/HBoxContainer/SpritesheetLayerOptions"]
layout_mode = 2
min_value = 1.0
value = 1.0

[node name="NewFrameOptions" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/NewFrameOptions"]
layout_mode = 2
text = "At layer:"

[node name="AtLayerOption" type="OptionButton" parent="VBoxContainer/HBoxContainer/NewFrameOptions"]
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="ReplaceCelOptions" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/ReplaceCelOptions"]
layout_mode = 2
text = "At layer:"

[node name="AtLayerOption" type="OptionButton" parent="VBoxContainer/HBoxContainer/ReplaceCelOptions"]
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/ReplaceCelOptions"]
layout_mode = 2
text = "At frame:"

[node name="AtFrameSpinbox" type="SpinBox" parent="VBoxContainer/HBoxContainer/ReplaceCelOptions"]
layout_mode = 2
mouse_default_cursor_shape = 2
min_value = 1.0
max_value = 1.0
value = 1.0

[node name="NewLayerOptions" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/NewLayerOptions"]
layout_mode = 2
text = "At frame:"

[node name="AtFrameSpinbox" type="SpinBox" parent="VBoxContainer/HBoxContainer/NewLayerOptions"]
layout_mode = 2
mouse_default_cursor_shape = 2
min_value = 1.0
max_value = 1.0
value = 1.0

[node name="NewBrushOptions" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/NewBrushOptions"]
layout_mode = 2
text = "Brush type:"

[node name="BrushTypeOption" type="OptionButton" parent="VBoxContainer/HBoxContainer/NewBrushOptions"]
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="BrushName" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/NewBrushOptions"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/NewBrushOptions/BrushName"]
layout_mode = 2
text = "Brush name:"

[node name="BrushNameLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/NewBrushOptions/BrushName"]
layout_mode = 2

[connection signal="about_to_popup" from="." to="." method="_on_PreviewDialog_about_to_show"]
[connection signal="confirmed" from="." to="." method="_on_PreviewDialog_confirmed"]
[connection signal="toggled" from="VBoxContainer/ApplyAll" to="." method="_on_ApplyAll_toggled"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/ImportOption" to="." method="_on_ImportOption_item_selected"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SpritesheetTabOptions/Manual/HorizontalFrames" to="." method="_on_HorizontalFrames_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SpritesheetTabOptions/Manual/VerticalFrames" to="." method="_on_VerticalFrames_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SpritesheetTabOptions/Smart/Threshold" to="." method="_on_Threshold_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SpritesheetTabOptions/Smart/MergeDist" to="." method="_on_MergeDist_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SpritesheetTabOptions/Smart/Slice" to="." method="_on_Slice_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/SpritesheetTabOptions/SmartSlice" to="." method="_on_SmartSlice_toggled"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/NewBrushOptions/BrushTypeOption" to="." method="_on_BrushTypeOption_item_selected"]
